--- a/report/relatorio.tex
+++ b/report/relatorio.tex
@@ -21,7 +21,6 @@ Financial portfolio optimization}
 
 
 \documentclass[a4paper]{IEEEtran}
-\usepackage[portuguese]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{amsmath}
@@ -31,15 +30,17 @@ Financial portfolio optimization}
 \maketitle
 
 \begin{abstract}
-  The abstract is the show case of your work. Typically it extends for
-  not more than 100-150 words.
-  The abstract must not contain references, as it may be used without
-  the main article. Avoid general motivation and highlight not just
-  the problem, but also the principal results. Usually people read
-  abstracts and then decide whether to continue reading the rest of the
-  paper. Since the abstract might be used by search engines, be sure
-  that terms that identify your work are found there.
-
+ Para o problema de \textit{Financial portfolio optimization}, dado um conjunto de \textit{assets}, pretende-se obter uma forma de distribuir o dinheiro a investir por forma a maximizar o retorno. A cada \textit{asset}, existe um risco associado, sendo que o risco de cada um poderá, ou não, influenciar o risco dos restantes.
+%----------------------------------------------------------------------------------------------------------------
+%PERGUNTAR!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+Se considerarmos todas as variáveis inerentes à otimização deste tipo de problemas, iremos obter funções não convexas, pelo que se considera uma aproximação facilmente computável através de otimização convexa e cujos resultados, obtidos a partir do \textit{software CVX}, são bastante próximos dos ótimos. 
+%----------------------------------------------------------------------------------------------------------------
+%segunda parte do projeto
+Posteriormente, o problema foi reformulado por forma a obter uma solução sub-ótima mas com menor tempo de computação. 
+%----------------------------------------------------------------------------------------------------------------
+%principais resultados
+%PERGUNTAR!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+%----------------------------------------------------------------------------------------------------------------
 \end{abstract}
 
 \section{Introduction}
