--- a/report/relatorio.tex
+++ b/report/relatorio.tex
@@ -185,6 +185,19 @@ Não sendo possível a implementação de funções não diferenciáveis, faz-se
 \text{subject to} &  Ax=b \end{array}
 \end{equation}
 
+Para valores positivos de \textit{t}, $(1/t) log(f_i(x))$ será uma aproximação suave da barreira. Há medida que se aumenta o parâmetro \textit{t}, a aproximação utilizada será cada vez mais próxima da barreira ideal. A figura \ref{fig:barrier} ilustra a aproximação à barreira pretendida com a variação de \textit{t}.
+
+%PERGUNTAR!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! CENTRAR
+\begin{figure}[htp]
+  \centering
+  \includegraphics[width=0.9\columnwidth]{log-barrier.png}
+  \caption{Aproximação da barreira ideal para vários valores de \textit{t}}
+  \label{fig:barrier}
+\end{figure}
+
+
+
+
 \section{Numerical results}
 \label{sec:numerical-results}
 
