--- a/report/relatorio.tex
+++ b/report/relatorio.tex
@@ -264,7 +264,9 @@ A expressão da hessiana será obtida de forma idêntica pelas equações (\ref{
 \nabla^2 \phi (z) = \sum_{i=1}^{m} \frac{1}{-f_i^2 (z)} \nabla f_i (z) (\nabla f_i (z))^\top
 \end{equation}
 
-\section{Numerical results}
+
+
+\section{Resultados Numéricos}
 \label{sec:numerical-results}
 
 How does it really work in practice? Provide simulated performance
@@ -301,7 +303,7 @@ significant over what range and which ones are less important.
 
 
 
-\section{Conclusions}
+\section{Conclusões}
 \label{sec:conclusion}
 
 In general a short summarizing paragraph will be sufficient. It should
