--- a/report_barrier/relatorio.tex
+++ b/report_barrier/relatorio.tex
@@ -193,7 +193,7 @@ Em (\ref{eq.barrier}), $I\_f_i(x)$ é a função indicadora e representa uma bar
 \begin{figure}[htp]
   \centering
   \captionsetup{font=scriptsize} 
-  \includegraphics[width=0.9\columnwidth]{log-barrier.png}
+  \includegraphics[width=0.9\columnwidth]{./log-barrier}
   \caption{Aproximação da função indicadora por vários valores de \textit{t}}
   \label{fig:barrier}
 \end{figure}
