--- a/report_barrier/relatorio.tex
+++ b/report_barrier/relatorio.tex
@@ -138,16 +138,17 @@ Em (\ref{eq.barrier}), $I\_f_i(x)$ é a função indicadora e representa uma bar
 \begin{figure}[htp]
   \centering
   \captionsetup{font=scriptsize} 
-  \includegraphics[width=0.9\columnwidth]{./log-barrier}
+  \includegraphics[scale=0.8]{./log-barrier}
   \caption{Aproximação da função indicadora por vários valores de \textit{t}}
   \label{fig:barrier}
 \end{figure}
 
-Não sendo possível a implementação de funções não diferenciáveis, faz-se uma aproximação logarítmica, representada em (\ref{eq.log-bar}), da barreira onde é possível aplicar o método de \textit{Newton}, pelo facto de a nova formulação ser \textit{smooth}. Desta forma, escolhendo uma tolerância e um valor para \textit{t}, será possível obter uma solução sub-ótima para o problema em apenas uma iteração. No entanto, não tendo forma de escolher o valor de \textit{t} mais apropriado, utiliza-se o \textit{Barrier Method} que permite efetuar várias otimizações da função $f(z)$, \textit{homotopy method}.
-À medida que \textit{t} tende para um valor elevado, espera-se que o valor sub ótimo, $x^\ast(t)$, se aproxime do valor ideal, $x^\ast$. Quando \textit{t} tende para infinito espera-se que $x^\ast(t)$ tenda para $x^\ast$, e que este valor seja a solução do nosso problema. As soluções de cada iteração estão situadas ao longo do \textit{central path} que corresponde ao conjunto de soluções $x^\ast(t)$. Estas soluções são caracterizadas pelas \textit{KKT Conditions} e são, usualmente, denominadas de \textit{central points}. O \textit{Barrier Method} é iterativo, pelo que, a cada iteração, chamada \textit{outer iteration}, é computada uma solução sub ótima, esta solução é depois utilizada com ponto inicial de próxima iteração, estende-se esta computação até que o \textit{stopping criterion} seja verificado. A cada iteração o valor de \textit{t} é aumentado por um fator $\mu$, este fator é denominado de \textit{barrier parameter} e controla o valor que a \textit{log barrier} toma. O \textit{stopping criterion} é obtido através do \textit{duality gap} e é dado por $f(x^\ast(t))-f^\ast \leq m/t$, em que m é o número de \textit{contraints} existentes no problema e $f(x^\ast(t))-f^\ast$ o \textit{duality gap}, ou seja, a diferença entre a solução sub ótima e a ótima, e irá ser substituído por $\epsilon$, ou nível de precisão, como se observa na descrição do método. Como referido acima, espera-se que, quando \textit{t} tenda para infinito, $f(x^\ast(t))-f^\ast$ tenda para zero.
+Não sendo possível a implementação de funções não diferenciáveis, faz-se uma aproximação logarítmica, representada em (\ref{eq.log-bar}), da barreira onde é possível aplicar o método de \textit{Newton}. Desta forma, escolhendo uma tolerância e um valor para \textit{t}, será possível obter uma solução sub-ótima para o problema em apenas uma iteração. Utiliza-se o \textit{Barrier Method} que permite efetuar várias otimizações de $f(z)$ em função de \textit{t}.
+Quando \textit{t} tende para infinito espera-se que $x^\ast(t)$ tenda para $x^\ast$, e que este valor seja a solução do nosso problema. As soluções de cada iteração estão situadas ao longo do \textit{central path} que corresponde ao conjunto de soluções $x^\ast(t)$ e são caracterizadas pelas \textit{KKT Conditions}. A cada iteração do \textit{Barrier Method}, \textit{outer iteration}, é computada uma solução sub ótima, que é depois utilizada como ponto inicial da próxima iteração. Estende-se esta computação até que o \textit{stopping criterion} seja verificado. 
+A cada iteração o valor de \textit{t} é aumentado por um fator $\mu$, que controla o valor que a \textit{log barrier} toma. O \textit{stopping criterion} é obtido através de $f(x^\ast(t))-f^\ast \leq m/t$, em que m é o número de \textit{contraints} existentes no problema.
 
 No \textit{Barrier Method} a escolha dos parâmetros \textit{t} e $\mu$ é de grande importância. Caso $\mu$ seja muito pequeno irão ser necessárias muitas \textit{outer iterations}, visto que o aumento de \textit{t} será reduzido, por outro lado, caso $\mu$ seja muito elevado, irão ser necessárias muitas iterações do método de \textit{Newton}, já que as soluções sub ótimas de iterações consecutivas irão estar muito afastadas entre si. Quanto ao valor de \textit{t} inicial, se este for muito pequeno, irão ser também necessárias muitas \textit{outer iterations}, a adaptação à função indicadora será feita lentamente, caso \textit{t} inicial seja muito elevado, a primeira iteração do método de \textit{Newton} (\textit{first centering step}) irá requerir muitas iterações para calcular $x^\ast$ inicial.
-
+Por último, o \textit{Barrier Method} converge num número finito de iterações.
 
 
 Pela impossibilidade de aplicação deste método com a formulação anterior devido à \textit{constraint} \: $1^\top\omega=1$, foi necessário recorrer a uma mudança de variável.
@@ -265,20 +266,12 @@ A expressão da hessiana será obtida de forma idêntica pelas equações (\ref{
 \nabla^2 \phi (z) = \sum_{i=1}^{m} \frac{1}{-f_i^2 (z)} \nabla f_i (z) (\nabla f_i (z))^\top
 \end{equation}
 
-Por último, o \textit{Barrier Method} converge num número finito de iterações pelo indicado pelo ponto três do algoritmo. O número de \textit{centering steps} requerido ao \textit{Barrier Method} para atingir um nível de precisão $\epsilon$ são:
-
-\begin{equation}
-\label{steps}
-\frac{log(\frac{m}{t^{(0)}\epsilon})}{log(\mu)} + 1
-\end{equation}
+Com esta reformulação é possível aplicar o \textit{Barrier Method} ao problema de \textit{Portfolio Optimization}.
 
 \section{Resultados Numéricos}
 \label{sec:numerical-results}
 
-How does it really work in practice? Provide simulated performance
-metrics. If possible, compare with other well-known methods.
-
-Nas figuras que irão ser expostas tem-se a verde os resultados do \textit{Barrier Method} e a vermelho do \textit{CVX}, tanto os retornos como os riscos dos \textit{assets} são iguais para ambos os programas.
+Nas figuras que irão ser expostas tem-se a verde os resultados do \textit{Barrier Method} e a vermelho do \textit{CVX}.  Os retornos e os riscos dos \textit{assets} são iguais para ambos os programas.
 Para verificar o correto funcionamento de ambos os programas realizaram-se testes em que os resultados podem ser facilmente previstos, tais como:
 
 \begin{itemize}
@@ -306,28 +299,6 @@ Na figura \ref{fig:caso1} observa-se que, de facto, o capital foi investido no \
 
 Na figura \ref{fig:caso2.1} a solução dada por ambos os programas é em tudo semelhante, note-se que, apesar das \textit{rates of return} dos \textit{assets} de menor risco serem negativas, a aversão ao risco do utilizador irá gerar um portfólio em que a importância dada ao risco é bastante superior à dos retornos. A divisão do portfólio pelos dois \textit{assets} de menor risco é a esperada, ambos os programas \: escolheram investir mais capital no \textit{asset} com maior retorno.
 
-
-\begin{figure}[htp]
-\captionsetup{font=scriptsize}  
-  \centering
-  \includegraphics[width=0.9\columnwidth]{./gama_100_positivos}
-  \caption{Portfólio com $\gamma$ igual a 100 e retornos positivos}
-  \label{fig:caso2.2}
-\end{figure}
-
-No caso da figura \ref{fig:caso2.2}, o portfólio segue o mesmo padrão da figura \ref{fig:caso2.1}, aposta-se o capital nos \textit{assets} de menor risco e entre eles, investe-se a grande parte no \textit{asset} que apresenta maior retorno.
-\vskip 4mm
-\item Igualar todos o \textit{returns} e riscos de todos os \textit{assets}. O portfólio deverá dividir o capital igualmente por todos os \textit{assets}.
-
-\begin{figure}[htp]
-\captionsetup{font=scriptsize}  
-  \centering
-  \includegraphics[width=0.9\columnwidth]{./miu_igual}
-  \caption{Portfólio com riscos e retornos iguais para todos os \textit{assets}}
-  \label{fig:caso3}
-\end{figure}
-\vskip 4mm
-Na figura \ref{fig:caso3} os resultados do portfólio refletem o esperado, visto que ambos os programas repartiram igualmente o capital por todos os \textit{assets}.
 \vskip 4mm
 \item Igualar apenas os \textit{returns} de todos os \textit{assets}. O portfólio deverá investir a grande parte do seu capital no \textit{asset} de menor risco. Quando se aumenta $\gamma$ nesta situação é esperado que a quantidade investida no \textit{asset} de menor risco aumente.
 
@@ -343,38 +314,24 @@ No caso enunciado acima, a solução de portfólio ótima é intuitiva, os progr
 
 \end{itemize} 
 
+No gráfico da figura \ref{fig:tempometodos}, é possível observar o tempo requerido para a otimização de uma solução para o problema, consoante a abordagem utilizada, em função do número de variáveis do problema.
 
-The commentary of the plots should not just repeat the graphically
-obvious such as "the solution is different from the original signal",
-but explain, for example, how this difference relates to quick changes
-on the signal. Is the solution too slow to follow the signal
-variations? What is the magnitude of the error?
+Quando o número de variáveis é pequeno, menor que cem, o \textit{Barrier Method} é cerca de cem vezes mais rápido que o \textit{CVX}. Ao aumentar o seu número, a diferença entre os tempos de otimização diminui, continuando o \textit{Barrier Method} a ser mais rápido (cerca de dez vezes). A partir de cerca de mil variáveis, a diferença entre os tempos volta a ser superior.
+
 
 \begin{figure}[htp]
+\captionsetup{font=scriptsize}  
   \centering
-  \includegraphics[width=0.9\columnwidth]{./solution1}
-  \caption{Solution for the L1 norm cost function.}
-  \label{fig:solution-l1}
+  \includegraphics[width=0.9\columnwidth]{./tempo_metodos}
+  \caption{Tempo de resolução do problema pelos dois \textit{solvers}}
+  \label{fig:tempometodos}
 \end{figure}
 
-You might also want to vary the problem's parameters and see how the
-solution evolves. Don't forget to explain why is the choice of
-parameters in the solution depicted in Figure~\ref{fig:solution-l1}
-better than the others.
 
-Figures should be chosen wisely. You can never lay out the whole
-parameter space, so provide insight into which parameters are
-significant over what range and which ones are less important.
-
-
-
-\section{Conclusões}
+\section{Conclusão}
 \label{sec:conclusion}
 
-In general a short summarizing paragraph will be sufficient. It should
-not simply repeat material from the Abstract or Introduction. In some
-cases it's possible to now make the original claims more concrete,
-\textit{e.g.}, by referring to quantitative results.
+A partir da utilização do \textit{Barrier Method} foi possível aproximar os resultados aos obtidos pelo \textit{CVX} só que com um tempo bastante inferior.
 
 
 \begin{thebibliography}{9}
